# Genetic_Algorithm_

./: Cargo.toml  README.md
src/: camera.rs  main.rs  simulation.rs  world.rs
src/simulation/: data_genom.rs
