[package]
name = "algogen"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.2", features = ["dynamic_linking"] }
rand = "0.8"
bevy_debug_grid = "0.6"
bevy_egui = "=0.29.0"
bevy_fly_cam = "0.1.0"
bevy_fly_camera = "0.10.0"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
